--- a/newpost.html
+++ b/newpost.html
@@ -1,1 +1,126 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Make!t</title>
+    <style>
+    <--! nav bar https://www.w3schools.com/howto/howto_js_topnav_responsive.asp -->
+      * {
+        margin:0;
+        padding:0;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      body {
+      	margin:0;
+        padding:0;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      .navbar {
+        list-style-type:none;
+        margin:0;
+        padding:0;
+        overflow:hidden;
+        background-color:white;
+        position:fixed;
+        top:0;
+        left:0;
+        width:100%;
+        height:6vh;
+        box-shadow: 0 .5vw 2vw grey;
+      }
+      .navbar a {
+      	font-size:2.5vh;
+        float:right;
+        color:#ec407a;
+        background-color:white;
+        text-decoration:none;
+        display:block;
+        padding: 2vh 2vh;
+        text-align:center;
+        width:15vw;
+      }
+      .navbar a:hover {
+        background-color: #f8bbd0;
+        color:white;
+      }
+      .navbar a.active {
+        color:white;
+        background-color:#f8bbd0;
+      }
+      .navbar .icon {
+      	display:none;
+      }
+      @media screen and (max-width:700px) {
+      	.navbar a:not(:first-child) {display:none; }
+        .navbar a.icon {
+        	float:right;
+            display:block;
+        }
+      }
+      @media screen and (max-width:700px) {
+      	.navbar.responsive {position:relative;}
+        .navbar.responsive .icon {
+        	position:absolute;
+            right:0;
+            top:0;
+         }
+         .navbar.responsive a {
+         	float:none;
+            display: block;
+            text-align: left;
+          }
+       }
+        
+      #signup {
+        color:white;
+        background-color:#ec407a;
+        display:block;
+        text-decoration:none;
+        padding:none;
+        border-radius:10%;
+        float:right;
+      }
+      .footer {
+        color:white;
+        background-color:#09A5B2;
+      }
+      .footer a {
+        color:white;
+        text-decoration:none;
+        display:block;
+      }
+      .footer li {
+        list-style-type:none;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="navbar" id="nav-bar">
+      <a href="javascript:void(0);" class="icon" onclick="resizeNav()">&#9776;</a>
+      <a id="signup" href="signup.html">Sign up</a>
+      <a href="newpost.html">share</a></li>
+      <a href="favorites.html">create</a>
+      <a class="active" href="index.html">discover</a>
+      <img float="left" src="makeit_onecolor_horizontal.png" width=100vw/>
+    </div>
+    <script>
+    function resizeNav() {
+    	var x = document.getElementById("nav-bar");
+        if (x.className === "topnav") {
+        	x.className += " responsive";
+        } else {
+        	x.className = "topnav";
+        }
+     }
+    </script>
+    <img src="arduinotable.png" alt="Arduino table" width=100% />
+    <h1>Projects</h1>
+    <p>Something</p>
+    <div class="footer">
+      <ul>
+        <li><a href="aboutus.html">about us</a></li>
+        <li><a href="signup.html">create an account</a></li>
+      </ul>
+      <h1>Make!t</h1>
+    </div>
+  </body>
+</html>
