--- a/homepage.html
+++ b/homepage.html
@@ -2,9 +2,57 @@
 <html>
     <title>make!t</title>
     <head>
-
     </head>
     <body>
-        
+        <body style="margin-right: 0px; margin-left: 0px;">
+            <!-- Navigation bar -->
+            <!-- Note that account type student is represented by 0, account type
+    service advisor is represented by 1, and account type organization
+    rep is represented by 2. Also note that a school is represented by 0
+    and an organization is represented by 2.-->
+
+            <!--following tutorial http://www.w3schools.com/howto/howto_js_sidenav.asp-->
+            <script>
+                var open = false;
+
+            </script>
+            <div id="spacer"></div>
+            <div class="backgroundimage" src= "makeit/make!t.jpg">
+                <!--<div class="caption" id="s2shomepagelabel">
+                    <span class="border">make!t</span>
+                </div> -->
+                <div class="caption">
+                    <img height="30" alt="down" src="downarrow.png">
+                </div>
+            </div>
+
+            <a id="targetabout"></a>
+            <div class="homepageparagraph">
+                <p> make!t is a social media platform focused on encouraging 
+                    students of all ages to discover, create, and share STEM 
+                    projects while connecting with other users. </p>
+            </div>
+
+            <div class="backgroundimage" id="homepageimage2">
+            </div>
+
+            <div class="homepageparagraph">
+                <h3>SIGN UP</h3>
+                <p> <a href="s2ssignupprimary.php">Sign up!</a> Sign up as a student to connect to people you might be able to
+                    help! Sign up as an organization representative to post opportunities! Sign up as a service advisor to
+                    be able to view your students and their opportunities. Register to "Student to Service" to aid your community!</p>
+            </div>
+
+            <div class="backgroundimage" id="homepageimage3">
+            </div>
+
+            <div id="footer">
+                <div id="leftfooter" style="margin-left: 20px;">
+                    <a href="s2shome.php">© 2016 <strong>Anya Vinogradsky</strong></a>
+                </div>
+            </div>
+
+
+        </body>
     </body>
 <html>
