--- a/newpost.html
+++ b/newpost.html
@@ -3,7 +3,7 @@
   <head>
     <title>Make!t</title>
     <style>
-    <--! nav bar https://www.w3schools.com/howto/howto_js_topnav_responsive.asp -->
+    <--! nav bar borrowed heavily from https://www.w3schools.com/howto/howto_js_topnav_responsive.asp -->
       * {
         margin:0;
         padding:0;
@@ -26,11 +26,12 @@
         width:100%;
         height:6vh;
         box-shadow: 0 .5vw 2vw grey;
+
       }
       .navbar a {
       	font-size:2.5vh;
         float:right;
-        color:#ec407a;
+        color:#FF0099;
         background-color:white;
         text-decoration:none;
         display:block;
@@ -72,16 +73,22 @@
         
       #signup {
         color:white;
-        background-color:#ec407a;
+        background-color:#FF0099;
         display:block;
         text-decoration:none;
         padding:none;
         border-radius:10%;
+        padding:0.5vw 0vw;
+        margin:0.25vw 1vw;
         float:right;
+      }
+      #logo {
+        float:left;
+        width:90vw;
       }
       .footer {
         color:white;
-        background-color:#09A5B2;
+        background-color:#09A7B2;
       }
       .footer a {
         color:white;
@@ -96,11 +103,12 @@
   <body>
     <div class="navbar" id="nav-bar">
       <a href="javascript:void(0);" class="icon" onclick="resizeNav()">&#9776;</a>
-      <a id="signup" href="signup.html">Sign up</a>
-      <a href="newpost.html">share</a></li>
-      <a href="favorites.html">create</a>
-      <a class="active" href="index.html">discover</a>
-      <img float="left" src="makeit_onecolor_horizontal.png" width=100vw/>
+      <a id="signup" href="signup.html">Log in/ Sign up</a>
+      <a href="aboutus.html">about us</a>
+      <a href="newpost.html">new post</a></li>
+      <a href="myprojects.html">my projects</a>
+      <a class="active" href="discover.html">discover</a>
+      <a href="homepage.html"><img src="makeit_onecolor_horizontal.png" width=90vw float="left" /></a>
     </div>
     <script>
     function resizeNav() {
